# CloudOne

./: Cargo.toml  Dockerfile  Dockerfile_argo  Makefile  README.md  build.rs  entrypoint.sh  main.go
.github/workflows/: build.yml  pre-build.yml
frontend/src/components/: SettingsModal.vue
frontend/src/i18n/: index.js
frontend/src/views/: Files.vue  Login.vue  ShareView.vue  Shared.vue
internal/auth/: models.go
internal/handler/: handler.go
internal/terminal/: terminal.go
src/: auth.rs  config.rs  db.rs  handler.rs  main.rs  terminal.rs  types.rs  util.rs  webdav.rs
