[package]
name = "cloudone"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17"
jsonwebtoken = "10"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
mime_guess = "2"
zip = "6"
tar = "0.4"
flate2 = "1"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
futures-util = "0.3"
url = "2"
quick-xml = "0.38"
libc = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
